[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Pages/EntityMenu/addNewButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Styles/style1.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/Pages/GeneratorMenu/GeneratorMenu.gd" type="Script" id=3]

[node name="Control" type="Control" groups=["generatorMenu"]]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color( 0.203922, 0.196078, 0.192157, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
margin_top = 15.0
margin_right = 970.0
margin_bottom = 35.0
size_flags_horizontal = 3
text = "Generator Definitions:  "
align = 2
valign = 1

[node name="ExitBtn" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
margin_left = 974.0
margin_right = 1024.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
text = "  X  "

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 54.0
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxChooseEntity" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_right = 210.0
margin_bottom = 546.0
rect_min_size = Vector2( 200, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxChooseEntity"]
margin_right = 210.0
margin_bottom = 104.0

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxChooseEntity/VBoxContainer"]
margin_right = 210.0
margin_bottom = 20.0
text = "Choose generator"
align = 1

[node name="OptionButton" type="OptionButton" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxChooseEntity/VBoxContainer"]
margin_top = 24.0
margin_right = 210.0
margin_bottom = 50.0
text = "Text"
align = 1
items = [ "Text", null, false, 0, null, "Image", null, false, 1, null, "Menu btn", null, false, 2, null, "Menu sound test", null, false, 3, null, "Menu music test", null, false, 4, null ]
selected = 0

[node name="AddNewEntityBtn" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxChooseEntity/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 54.0
margin_right = 210.0
margin_bottom = 104.0

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxChooseEntity"]
margin_top = 108.0
margin_right = 210.0
margin_bottom = 546.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="EntityListContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxChooseEntity/ScrollContainer"]
margin_right = 200.0
margin_bottom = 500.0
rect_min_size = Vector2( 200, 500 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_left = 214.0
margin_right = 1024.0
margin_bottom = 546.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 810.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 810.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 810.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_top = 10.0
margin_right = 145.0
margin_bottom = 30.0
text = "Generator Name: "

[node name="EntityNameEdit" type="TextEdit" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 149.0
margin_right = 810.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 40 )
size_flags_horizontal = 3
text = "dsfsdfsdf"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 810.0
margin_bottom = 546.0
mouse_filter = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 250.0
margin_bottom = 502.0
mouse_filter = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 250.0
margin_bottom = 20.0
text = "Generator Fields"
align = 1

[node name="AddNewEntityField" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer" instance=ExtResource( 1 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 24.0
margin_right = 250.0
margin_bottom = 74.0

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 24.0
margin_right = 250.0
margin_bottom = 502.0
rect_min_size = Vector2( 250, 0 )
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="ContainerChooseField" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer"]
margin_right = 250.0
margin_bottom = 478.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 254.0
margin_right = 810.0
margin_bottom = 502.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="ContainerFieldProperties" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/ScrollContainer"]
margin_right = 556.0
margin_bottom = 502.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="button_down" from="CanvasLayer/VBoxContainer/HBoxContainer2/ExitBtn" to="." method="_on_ExitBtn_button_down"]
[connection signal="item_selected" from="CanvasLayer/VBoxContainer/HBoxContainer/VBoxChooseEntity/VBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer/HBoxContainer/VBoxChooseEntity/VBoxContainer/AddNewEntityBtn" to="." method="_on_AddNewEntityBtn_button_down"]
[connection signal="text_changed" from="CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3/EntityNameEdit" to="." method="_on_EntityNameEdit_text_changed"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/AddNewEntityField" to="." method="_on_AddNewEntityField_button_down"]
